meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__session_event_handler__tests__end_with_metrics.snap
---
source: memfaultd/src/metrics/session_event_handler.rs
expression: manifest.metadata
---
{
  "type": "linux-metric-report",
  "metadata": {
    "metrics": {
      "bar": 3.0,
      "foo": 1.0,
      "operational_crashes": 0.0
    },
    "duration_ms": 0,
    "boottime_duration_ms": 0,
    "report_type": {
      "session": "test-session"
    }
  }
}
