meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__session_event_handler__tests__start_then_stop.snap
---
source: memfaultd/src/metrics/session_event_handler.rs
expression: manifest.metadata
---
{
  "type": "linux-metric-report",
  "metadata": {
    "metrics": {
      "bar": 20.0,
      "foo": 100.0
    },
    "duration_ms": 0,
    "report_type": {
      "session": "test-session"
    }
  }
}
