meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__session_event_handler__tests__start_with_metrics.snap
---
source: memfaultd/src/metrics/session_event_handler.rs
expression: metrics
---
{
  "bar": 4.0,
  "foo": 1.0
}
