meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__session_event_handler__tests__start_without_stop_session.snap
---
source: memfaultd/src/metrics/session_event_handler.rs
expression: metrics
---
{
  "bar": 2.0,
  "foo": 1.0,
  "operational_crashes": 0.0
}
